# python-intermediate-inflammation

./: .gitignore  README.md  inflammation-analysis.py  pyproject.toml  requirement.txt
inflammation/: models.py
tests/: test_models.py
